# dft-efe

./: .COPYLEFT_HEADER  .clang-format  .gitignore  AtomCenterNonLocalOpContextFE_8cpp.html  AtomCenterNonLocalOpContextFE_8cpp__incl.map  AtomCenterNonLocalOpContextFE_8cpp__incl.md5  AtomCenterNonLocalOpContextFE_8h.html  AtomCenterNonLocalOpContextFE_8h.js  AtomCenterNonLocalOpContextFE_8h__dep__incl.map  AtomCenterNonLocalOpContextFE_8h__dep__incl.md5  AtomCenterNonLocalOpContextFE_8h__incl.map  AtomCenterNonLocalOpContextFE_8h__incl.md5  AtomCenterNonLocalOpContextFE_8h_source.html  AtomCenterNonLocalOpContextFE_8t_8cpp.html  AtomCenterNonLocalOpContextFE_8t_8cpp.js  AtomCenterNonLocalOpContextFE_8t_8cpp__dep__incl.map  AtomCenterNonLocalOpContextFE_8t_8cpp__dep__incl.md5  AtomCenterNonLocalOpContextFE_8t_8cpp__incl.map  AtomCenterNonLocalOpContextFE_8t_8cpp__incl.md5  AtomFieldDataSpherical_8cpp.html  AtomFieldDataSpherical_8cpp__incl.map  AtomFieldDataSpherical_8cpp__incl.md5  AtomFieldDataSpherical_8h.html  AtomFieldDataSpherical_8h__dep__incl.map  AtomFieldDataSpherical_8h__dep__incl.md5  AtomFieldDataSpherical_8h__incl.map  AtomFieldDataSpherical_8h__incl.md5  AtomFieldDataSpherical_8h_source.html  AtomIdsPartition_8cpp.html  AtomIdsPartition_8cpp__incl.map  AtomIdsPartition_8cpp__incl.md5  AtomIdsPartition_8h.html  AtomIdsPartition_8h.js  AtomIdsPartition_8h__dep__incl.map  AtomIdsPartition_8h__dep__incl.md5  AtomIdsPartition_8h__incl.map  AtomIdsPartition_8h__incl.md5  AtomIdsPartition_8h_source.html  AtomIdsPartition_8t_8cpp.html  AtomIdsPartition_8t_8cpp.js  (+6924 more)
analysis/PseudoConverter/: CMakeLists.txt  PSPConverter.cpp
src/atoms/: AtomFieldDataSpherical.cpp  AtomFieldDataSpherical.h  AtomIdsPartition.h  AtomIdsPartition.t.cpp  AtomSevereFunction.cpp  AtomSevereFunction.h  AtomSevereFunction.t.cpp  AtomSphericalData.cpp  AtomSphericalData.h  AtomSphericalDataAnalytical.cpp  AtomSphericalDataAnalytical.h  AtomSphericalDataContainer.cpp  AtomSphericalDataContainer.h  AtomSphericalDataEnrichment.cpp  AtomSphericalDataEnrichment.h  AtomSphericalDataPSP.cpp  AtomSphericalDataPSP.h  AtomSphericalElectronicData.cpp  AtomSphericalElectronicData.h  AtomTCIASpline.cpp  AtomTCIASpline.h  AtomsFieldDataSphericalManager.h  BoostAutoDiff.cpp  BoostAutoDiff.h  CMakeLists.txt  Defaults.cpp  Defaults.h  EnrichmentIdsPartition.h  EnrichmentIdsPartition.t.cpp  OverlappingAtomIds.h  OverlappingAtomIds.t.cpp  SmoothCutoffFunctions.cpp  SmoothCutoffFunctions.h  SphericalData.cpp  SphericalData.h  SphericalData.t.cpp  SphericalDataAnalytical.cpp  SphericalDataAnalytical.h  SphericalDataMixed.cpp  SphericalDataMixed.h  (+6 more)
src/basis/: AtomCenterNonLocalOpContextFE.cpp  AtomCenterNonLocalOpContextFE.h  AtomCenterNonLocalOpContextFE.t.cpp  AtomIdsPartition.cpp  AtomIdsPartition.h  AtomIdsPartition.t.cpp  BasisDataStorage.h  BasisDofHandler.h  BasisHandler.h  BasisIndexMap.h  BasisManager.h  BasisManagerOperations.h  BasisOperations.h  BasisOverlapOperatorContext.cpp  BasisOverlapOperatorContext.h  BasisOverlapOperatorContext.t.cpp  BasisPartitioner.h  CFEBDSOnTheFlyComputeDealii.cpp  CFEBDSOnTheFlyComputeDealii.h  CFEBDSOnTheFlyComputeDealii.t.cpp  CFEBasisDataStorageDealii.cpp  CFEBasisDataStorageDealii.h  CFEBasisDataStorageDealii.t.cpp  CFEBasisDofHandlerDealii.cpp  CFEBasisDofHandlerDealii.h  CFEBasisDofHandlerDealii.t.cpp  CFEConstraintsLocalDealii.cpp  CFEConstraintsLocalDealii.h  CFEConstraintsLocalDealii.t.cpp  CFEOverlapInverseOpContextGLL.cpp  CFEOverlapInverseOpContextGLL.h  CFEOverlapInverseOpContextGLL.t.cpp  CFEOverlapInverseOperatorContext.cpp  CFEOverlapInverseOperatorContext.h  CFEOverlapInverseOperatorContext.t.cpp  CFEOverlapOperatorContext.cpp  CFEOverlapOperatorContext.h  CFEOverlapOperatorContext.t.cpp  CMakeLists.txt  Cell.cc  (+154 more)
src/ksdft/: CMakeLists.txt  Defaults.cpp  Defaults.h  DensityCalculator.cpp  DensityCalculator.h  DensityCalculator.t.cpp  ElectrostaticAllElectronFE.cpp  ElectrostaticAllElectronFE.h  ElectrostaticAllElectronFE.t.cpp  ElectrostaticExcFE.cpp  ElectrostaticExcFE.h  ElectrostaticExcFE.t.cpp  ElectrostaticFE.h  ElectrostaticLocalFE.cpp  ElectrostaticLocalFE.h  ElectrostaticLocalFE.t.cpp  ElectrostaticONCVNonLocFE.cpp  ElectrostaticONCVNonLocFE.h  ElectrostaticONCVNonLocFE.t.cpp  Energy.h  ExchangeCorrelationFE.cpp  ExchangeCorrelationFE.h  ExchangeCorrelationFE.t.cpp  FractionalOccupancyFunction.cpp  FractionalOccupancyFunction.h  Hamiltonian.h  KineticFE.cpp  KineticFE.h  KineticFE.t.cpp  KohnShamDFT.cpp  KohnShamDFT.h  KohnShamDFT.t.cpp  KohnShamEigenSolver.cpp  KohnShamEigenSolver.h  KohnShamEigenSolver.t.cpp  KohnShamOperatorContextFE.cpp  KohnShamOperatorContextFE.h  KohnShamOperatorContextFE.t.cpp  MixingScheme.cpp  MixingScheme.h  (+1 more)
src/linearAlgebra/: AbstractMatrix.cpp  AbstractMatrix.h  AbstractMatrix.t.cpp  BlasAPIWrapper.h  BlasAPIWrapperHost.cpp  BlasLapack.cpp  BlasLapack.h  BlasLapack.t.cpp  BlasLapackKernels.cpp  BlasLapackKernels.cu  BlasLapackKernels.h  BlasLapackTemplates.h  BlasLapackTypedef.h  BlasWrappers.cpp  BlasWrappers.h  BlasWrappers.t.cpp  BlasWrappersTypedef.h  CGLinearSolver.cpp  CGLinearSolver.h  CGLinearSolver.t.cpp  CMakeLists.txt  ChebyshevFilter.cpp  ChebyshevFilter.h  ChebyshevFilter.t.cpp  ChebyshevFilteredEigenSolver.cpp  ChebyshevFilteredEigenSolver.h  ChebyshevFilteredEigenSolver.t.cpp  Defaults.cpp  Defaults.h  DenseMatrixOperations.h  DenseMatrixOperations.t.cpp  DeviceBlasLapackExceptions.cuh  DeviceBlasLapackTemplates.cu  DeviceBlasLapackTemplates.h  DeviceLAContextsSingleton.cpp  DeviceLAContextsSingleton.cu  DeviceLAContextsSingleton.h  DeviceLATypeConfig.cuh  DistributedDenseMatrix.cpp  DistributedDenseMatrix.h  (+116 more)
src/physics/: CMakeLists.txt  LaplaceOperatorContextFE.cpp  LaplaceOperatorContextFE.h  LaplaceOperatorContextFE.t.cpp  PoissonLinearSolverFunctionFE.cpp  PoissonLinearSolverFunctionFE.h  PoissonLinearSolverFunctionFE.t.cpp
src/quadrature/: CMakeLists.txt  CellQuadratureContainer.cpp  CellQuadratureContainer.h  Defaults.cpp  Defaults.h  Integrate.cpp  Integrate.h  QuadAttributes.h  QuadratureAttributes.h  (+16 more)
(+801 files in other folders)
